Fixd the new button overlapping list items. Closes #132.

--- a/src/client/sass/rule-list-view.scss
+++ b/src/client/sass/rule-list-view.scss
@@ -9,6 +9,7 @@
 	-webkit-flex-shrink: 0;
 	-ms-flex-negative: 0;
 	flex-shrink: 0;
+  padding-bottom: 80px;
 }
 
 .rlv-new-item {
